[tool.poetry]
name = "alphashape"
version = "0.1.0"
description = "A Python library for Alpha Shapes in Euclidean and Spherical Geometries."
authors = ["Niklas M. Melton <niklasmelton@gmail.com>"]
license = "MIT"
homepage = "https://github.com/NiklasMelton/AlphaShape"
repository = "https://github.com/NiklasMelton/AlphaShape"
documentation = "https://github.com/NiklasMelton/AlphaShape"
readme = "README.md"
keywords = ["AlphaShape", "Alpha Shape", "Convex Hull", "Spherical", "Geometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Computational Geometry"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.19.4"
scipy = ">=1.5.4"
matplotlib = ">=3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
